--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,6 +1,14 @@
-// wrangler.jsonc
 {
-  "name": "karokey",
-  "pages_build_output_dir": ".", // The directory containing your index.html
-  "compatibility_date": "2025-11-10" // Use the current date
+  "name": "karokey-frontend",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "next": "13.5.2", 
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
